# notify-bot

./: .gitignore  pyproject.toml
app/: main.py  service.py  settings.py
