[project]
name = "notify-bot"
version = "0.0.0"
description = "Telegram notification bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "black>=25.12.0",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]